<resources>
    <string name="app_name">SMART GMO</string>

    <string name="altaOTstext">Alta OTs</string>
    <string name="autoOTstext">Auto OTs</string>
    <string name="historialOTstext">Historial OTs</string>
    <string name="callcenter">Llamar</string>
    <string name="perfil">Perfil de usuario</string>

    <string name="action_settings">Logout</string>
    <string name="title_activity_items">Things ToDo!</string>
    <string name="title_select_projects">My Projects</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nickname_hint">Select a username</string>

    <!-- Other strings -->
    <string name="project_description">Project description</string>
</resources>
